--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "vite": "^4.4.5"
-  }
+  },
+  "homepage": "https://calaser.github.io/Project_Sokoban/"
 }
